--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div id="sect1"class="container">       
-  <h2>Now Load image on the displa\</h2>  
-  </div>
+
+<!-- <div class="footer">
+<div class="container">
+  <span >All Rights Reserved <br>
+      Balaji Biradar<br>
+      Employee_Management_System<br>
+  </span>
+</div>
+</div>   -->
+ <!-- <mwl-calendar-week-view [viewDate]="viewDate">
+</mwl-calendar-week-view> 
+ <mwl-calendar-week-view-hour-segment ></mwl-calendar-week-view-hour-segment> --> -->
+<button routerLink="popups">popups</button>
+<router-outlet></router-outlet>
+
