--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import '~@fullcalendar/core/main.css';   */
+/* @import '~@fullcalendar/daygrid/main.css';   */
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+/* .footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height:40px;
+    background-color:black;
+    text-align: center;
+    color: aliceblue;
+}
+body {
+    font: 0.8em/160% Calibri, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #362b36;
+    background: #bfced9;
+    outline: 0 none;
+    vertical-align: baseline;
+} */
